Even more changes.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! How are you doing?<h1>
+<h1>Hello Coursera! How are you doing? It's a lovely day.<h1>
 </body>
 </html>
